--- a/src/main/resources/templates/Persons_Template.jrxml
+++ b/src/main/resources/templates/Persons_Template.jrxml
@@ -55,8 +55,8 @@ FROM persons]]>
 				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#006699" uuid="c896e78c-0f6a-4cd4-b23c-7d1015090d33"/>
 				<staticText>
 					<reportElement x="20" y="20" width="399" height="59" forecolor="#FFFFFF" uuid="0509f15a-8b1a-4f52-8d77-f52daeff24de"/>
-					<textElement>
-						<font fontName="DejaVu Sans" size="33" isBold="true"/>
+					<textElement textAlignment="Center">
+						<font fontName="DejaVu Sans" size="33" isBold="false"/>
 					</textElement>
 					<text><![CDATA[Список сотрудников]]></text>
 				</staticText>
